@@ -17,7 +17,7 @@ import sysconfig
 from sysconfig import (get_paths, get_platform, get_config_vars,
                        get_path, get_path_names, _INSTALL_SCHEMES,
                        _get_default_scheme, _expand_vars,
-                       get_scheme_names)
+                       get_scheme_names, get_config_var)
 
 class TestSysConfig(unittest.TestCase):
 
@@ -254,6 +254,15 @@ class TestSysConfig(unittest.TestCase):
         finally:
             unlink(link)
 
+    def test_user_similar(self):
+        # Issue 8759 : make sure the posix scheme for the users
+        # is similar to the global posix_prefix one
+        base = get_config_var('base')
+        user = get_config_var('userbase')
+        for name in ('stdlib', 'platstdlib', 'purelib', 'platlib'):
+            global_path = get_path(name, 'posix_prefix')
+            user_path = get_path(name, 'posix_user')
+            self.assertEquals(user_path, global_path.replace(base, user))
 
 def test_main():
     run_unittest(TestSysConfig)
